--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,8 +22,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvGSHhHEUPWu8S7cBHT7PxAnBo5aqeoKA&libraries=places&sensor=false"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvGSHhHEUPWu8S7cBHT7PxAnBo5aqeoKA&libraries=places"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
