--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,15 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
+<!-- unpkg -->
+<script src="https://unpkg.com/@barba/core"></script>
 
+<!-- jsdelivr -->
+<script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvGSHhHEUPWu8S7cBHT7PxAnBo5aqeoKA&libraries=places"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
